force-app/main/default/objects/OrgPackage__c/OrgPackage__c.object-meta.xml
<CustomObject>
    <description>Organization Package information retrieved during polling for the org search functionality</description>
    <label>OrgPackage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgPackages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>