force-app/main/default/objects/OrgPackage__c/fields/MajorVersion__c.field-meta.xml
<CustomField>
    <fullName>MajorVersion__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>The Major Version number. Used for a one time pull of the version number. Query takes too long to make it a permanent part of the pull</description>
    <label>MajorVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>