force-app/main/default/objects/OrgPackage__c/fields/NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>NamespacePrefix__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>NamespacePrefix of the managed package</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NamespacePrefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>