force-app/main/default/objects/OrgPackage__c/fields/PackageName__c.field-meta.xml
<CustomField>
    <fullName>PackageName__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Name of the Package</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PackageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>